Fixes paths, divide by zero problems on test

--- a/src/test/resources/log4j.properties
+++ b/src/test/resources/log4j.properties
@@ -6,7 +6,7 @@ log4j.appender.RELPAPPENDER.layout.ConversionPattern=[%p] [%F#%L] [%C] %m%n
 log4j.appender.RELPAPPENDER.relpAddress=localhost
 log4j.appender.RELPAPPENDER.relpPort=1666
 log4j.appender.RELPAPPENDER.appName=jla_05
-log4j.appender.RELPAPPENDER.hostname=localhost
+log4j.appender.RELPAPPENDER.hostname=configured.hostname
 log4j.appender.RELPAPPENDER.connectionTimeout=5000
 log4j.appender.RELPAPPENDER.writeTimeout=2000
 log4j.appender.RELPAPPENDER.readTimeout=15000
